# tele-bot-dominic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage_logs.py  pyproject.toml  requirements.txt
agent/: agent.py  prompt.py
agent/tools/: search.py
agentConversation/: __init__.py  agent.py  prompt.py
agentConversation/tools/: search.py
agentSummariser/: __init__.py  agent.py  prompt.py
bot/: __init__.py
bot/config/: __init__.py  database.py  models.py  settings.py
bot/handlers/: __init__.py  commands.py  message_handler.py
bot/services/: database_service.py
bot/utils/: __init__.py  bot_state.py  chat_history.py  log_manager.py  postgres_logger.py
summarising_agent/: agent.py  prompt.py
